# hierarchical_semantic

./: .gitignore  README.md  environment.yml  hierarchical_semantic_bottleneck_eeg_to_text_design.md  pyproject.toml
configs/: zuco_mvp.yaml
docs/: experiment_plan.md  server_usage.md
scripts/: 00_check_env.py  00_check_env.sh  01_prepare_env.sh  01_preprocess_zuco.py  02_build_taxonomy.py  02_check_data.sh  03_preprocess_zuco.sh  03_train_model.py  04_build_taxonomy.sh  04_decode_test_set.py  05_reconstruct_sentences.py  05_train_model.sh  06_decode_anchors.sh  06_evaluate.py  07_reconstruct_sentences.sh  08_evaluate.sh  09_run_smoke_test.py  09_run_smoke_test.sh  _common.sh
src/hsb_eeg2text/: __init__.py  config.py
src/hsb_eeg2text/datasets/: zuco_dataset.py
src/hsb_eeg2text/evaluation/: evaluate.py  metrics.py
src/hsb_eeg2text/inference/: decode.py  rag.py  reconstruct.py
src/hsb_eeg2text/inference/llm_backends/: __init__.py  base.py  factory.py  mock.py  openai_compatible.py  transformers_local.py
src/hsb_eeg2text/models/: eeg_encoders.py  losses.py  model.py  text_encoder.py
src/hsb_eeg2text/preprocessing/: zuco.py  zuco_mat.py
src/hsb_eeg2text/taxonomy/: build.py  tree.py
src/hsb_eeg2text/training/: train.py
src/hsb_eeg2text/utils/: env.py  io.py  random.py
tests/: test_dataset_filter.py  test_generation_metrics.py  test_llm_mock.py  test_losses.py  test_rag.py  test_reconstruct_parse.py  test_taxonomy_metrics.py  test_variants.py  test_zuco_mat.py
